--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(basic01 main.cpp TestDemo.h)
 
 add_executable(test_struct test_struct.cpp)
+add_executable(f_sum f_sum.cpp)
+
+add_executable(const const/main.cpp)
+add_executable(reference ./reference/main.cpp)
